--- a/css/style.css
+++ b/css/style.css
@@ -145,54 +145,7 @@ body{
 .slide-nav a:hover {
     opacity: 1;
 }
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-}
 
-
-footer {
-  background: #f5f5f5;
-  padding: 40px 20px;
-  font-family: Arial, sans-serif;
-}
-
-.footer-container {
-  display: flex;
-  justify-content: space-between;
-  max-width: 1000px;
-  margin: auto;
-}
-
-.footer-col {
-  flex: 1;
-  padding: 0 20px;
-}
-
-.footer-col h3 {
-  margin-bottom: 15px;
-  font-size: 16px;
-  color: #111;
-}
-
-.footer-col ul {
-  list-style: none;
-  padding: 0;
-}
-
-.footer-col ul li {
-  margin-bottom: 10px;
-}
-
-.footer-col ul li a {
-  text-decoration: none;
-  color: #333;
-  font-size: 14px;
-}
-
-.footer-col ul li a:hover {
-  color: #2563eb;
-}
 .product-container{
     margin-top: 30px;
     margin-bottom: 30px;
@@ -229,10 +182,71 @@ footer {
     height: 30px;
 }
 .product-list {
-    display: flex;
-    clear: both;
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
 }
 .product-block {
-    height: 400px;
-    background-color: aqua;
+    display: flex;
+    outline: 1.5px solid grey;
+    flex-direction: column;
+}
+.product-img {
+    flex: 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f5f5f5;
+}
+.product-img img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
+.product-info {
+    padding: 10px;
+    flex: 1;
+    text-align: center;
+}
+
+footer {
+  background: #f5f5f5;
+  padding: 40px 20px;
+  font-family: Arial, sans-serif;
+}
+
+.footer-container {     
+  display: flex;
+  justify-content: space-between;
+  max-width: 1000px;
+  margin: auto;
+}
+
+.footer-col {
+  flex: 1;
+  padding: 0 20px;
+}
+
+.footer-col h3 {
+  margin-bottom: 15px;
+  font-size: 16px;
+  color: #111;
+}
+
+.footer-col ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-col ul li {
+  margin-bottom: 10px;
+}
+
+.footer-col ul li a {
+  text-decoration: none;
+  color: #333;
+  font-size: 14px;
+}
+
+.footer-col ul li a:hover {
+  color: #2563eb;
 }
